# pybluecurrent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/pybluecurrent/: __init__.py  client.py  exceptions.py  utilities.py
tests/: conftest.py  test_client.py  test_utilities.py
